[package]
name = "thor"
version = "0.1.0"
authors = ["Leonardo Hahn <leonnardo.hahn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "thor"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
bencoding = { path = "../bencoding" }
env_logger = "0.7.1"
sha-1 = "0.8.1"
tokio = "0.2.0-alpha.6"
rand = "0.7"
byteorder = "1.3"
log = "0.4"
futures-util = "0.3.1"
